update upload photo
